--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "devStart": "nodemon app.js",
     "start": "node app.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run start"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm start"
   },
   "keywords": [],
   "author": "",
